scheduler for glue job
